# Veritron

./: .gitignore  Cargo.toml  README.md
veritron-orchestrator/: Cargo.toml
veritron-orchestrator/src/: errors.rs  lib.rs  main.rs
veritron-orchestrator/src/cli/: helper.rs  mod.rs  types.rs
veritron-orchestrator/src/simple/: mod.rs  orchestrator.rs
veritron-types/: Cargo.toml
veritron-types/src/: constants.rs  ingestion_types.rs  lib.rs
veritron-types/src/models/: api_config.rs  api_endpoint.rs  app_config.rs  connection.rs  source.rs
