[package]
name = "veritron-orchestrator"
version = "0.1.0"
edition = "2021"
default-run = "veritron"
authors = ["Mohsen Zainalpour"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veritron-types = {path = "../veritron-types"}
dotenvy = "0.15.3"
serde_json = "1.0.93"
serde = "1.0.152"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tempdir = "0.3.7"
clap = {version = "4.1.6", features = ["derive"]}
ctrlc = "3.2.5"
tonic = "0.8.3"
tokio-stream = "0.1.12"
include_dir = "0.7.3"
handlebars = "4.3.6"
rustyline = "10.1.1"
rustyline-derive = "0.8.0"
crossterm = "0.26.0"
futures = "0.3.26"

[[bin]]
edition = "2021"
name = "veritron"
path = "src/main.rs"

